tests/expectations/compiler/tuple/tuple_in_record_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372050]: A record cannot contain a tuple.
    --> compiler-test:6:9
     |
   6 |         amounts: (u64, u64),
     |         ^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {
     | ^^^^^^^^^^^^
"""]
